--- a/style.css
+++ b/style.css
@@ -4,53 +4,75 @@ Theme URI: http://github.com/abledaccess/fssfive
 Description: An HTML5 WordPress theme employing Fluid's Skinning System -- and the solution is inclusion.
 Author: Johnny Taylor
 Author URI: http://abledaccess.com
-Version: 1.5
+Version: 1.5.3
 */
 
-/* CSS browser reset; c/o Eric Meyer, http://meyerweb.com/eric/tools/css/reset/
+/* CSS browser "restart", c/o Harry Roberts; https://github.com/csswizardry/vanilla
 --------------------------------------------------------------------------- */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
+html,body,div,span,applet,object,iframe,
+h1,h2,h3,h4,h5,h6,p,blockquote,pre,hr,
+a,abbr,address,cite,code,
+del,dfn,em,img,ins,kbd,q,s,samp,
+small,strong,sub,sup,tt,var,
+b,u,i,
+dl,dt,dd,ol,ul,li,
+fieldset,form,label,legend,
+table,caption,tbody,tfoot,thead,tr,th,td,
+article,aside,canvas,details,figcaption,figure,
+footer,header,hgroup,menu,nav,section,summary,
+time,mark,audio,video{
+	margin:0;
+	padding:0;
+}
+article,aside,details,figcaption,figure,footer,
+header,hgroup,menu,nav,section{
+	display:block;
+}
+h1,h2,h3,h4,h5,h6{
+	font-size:100%;
+}
+table{
+	border-collapse:collapse;
+	border-spacing:0;
+}
+strong,b,mark{
+	font-weight:bold;
+	font-style:inherit;
+}
+em,i,cite,q,address,var{
+	font-style:italic;
+	font-weight:inherit;
+}
+abbr[title],dfn[title]{
+	cursor:help;
+	border-bottom:1px dotted;
+}
+ins{
+	border-bottom:1px solid;
+}
+a,u,ins{
+	text-decoration:none;
+	border-bottom: 1px solid;
+}
+del,s{
+	text-decoration:line-through;
+}
+code,samp,kbd{
+	font-family:monospace;
+}
+small{
+	font-size:0.75em;
+}
+img{
+	border:none;
+	font-style:italic;
+}
+input,select,textarea{
+	font:inherit;
+}
+fieldset {
 	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-body {
-	line-height: 1;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/* HTML5 display-role reset for older browsers
---------------------------------------------------------------------------- */
-
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
 }
 
 /* Global FSSFive theme specific container and body styles
@@ -85,18 +107,12 @@ h1 {
 p, ul, ol, blockquote, figure {
 	margin-bottom: 1em;
 }
-i, em {
-	font-style: italic;
-}
-b,  strong {
-	font-weight: bold;
-}
 sup {
-	font-size: 80%;
+	font-size: 75%;
 	vertical-align: top;
 }
 sub {
-	font-size: 80%;
+	font-size: 75%;
 	vertical-align: bottom;
 }
 
@@ -110,8 +126,8 @@ body {
 	padding: 2em 0 1em;
 }
 #site-title a {
+	border: 0;
 	color: #000;
-	text-decoration: none;
 }
 #site-description {
 	font-size: 1.25em;
@@ -157,10 +173,19 @@ body.blog h2.entry-title,
 body.single h2.entry-title,
 body.search h3.entry-title,
 body.archive h3.entry-title {
-	margin-bottom: 0.15em;
+	margin-bottom: 0;
+}
+.entry-title a {
+	border: 0;
 }
 figure {
 	margin: 0 1.35% 1em;
+}
+figure img {
+	width: 100%;
+}
+img.bio {
+	border: 2px solid #000;
 }
 #search-results {
 	font-weight: bold;
@@ -241,6 +266,9 @@ ol.commentlist .comment.depth-10 {
 }
 ol.commentlist .comment-reply:before {
 	content: "\2008\2014\2008";
+}
+#respond {
+	margin-bottom: 2.5em;
 }
 
 /* Form styles
@@ -337,7 +365,7 @@ body {
 	padding: 2em 0;
 }
 
-/* Responsive screen styles for viewports from as little as 320px (small screen) and exceeding 1200px (desktop and beyond)
+/* Responsive screen styles for viewports from 320px (small screen) and exceeding 1024px (desktop and beyond)
 --------------------------------------------------------------------------- */
 
 @media screen and (max-width: 1024px) {
